# TP-APIS-ecommerce-test-qa

./: .env.example  README.md  conftest.py  pyproject.toml  pytest.ini
api/: test_admin.py  test_auth.py  test_carrito.py  test_checkout.py  test_descuentos.py  test_ordenes.py  test_productos.py  test_variantes.py
e2e/: test_admin_panel.py  test_catalogo.py  test_compra.py  test_registro_login.py
integration/: test_flujo_admin.py  test_flujo_compra.py
