[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cumbre-tests"
version = "0.1.0"
description = "Test suite for Cumbre e-commerce — API, integration and E2E levels"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
    "python-dotenv>=1.0",
    "pytest-html>=4.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
